deployment_k8s/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cloudops-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
