deployment_k8s/laravel_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-nginx
  namespace: cloudops-app
spec:
  selector:
    app: laravel-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
