deployment_k8s/myadmin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: cloudops-app
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
