deployment_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
 name: fullstack-ingress

 annotations:
   kubernetes.io/ingress.class: alb
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/target-type: ip

spec:
 rules:
   - host: api.example.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: laravel-nginx
               port:
                 number: 80

   - host: app.example.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: frontend
               port:
                 number: 80
